--- a/css/main.css
+++ b/css/main.css
@@ -4,20 +4,22 @@ html {
     font-size: 100%; /* keep */
     box-sizing: border-box; /* keep */
 }
+
 * {
     box-sizing: inherit; /* keep */
 }
 body {
-    font-family: sans-serif;
+    font-family: 'PT Serif', 'Bodoni MT', 'Georgia', serif;
     background: #5598b2; /* keep */
     color: #333; /* keep */
     margin: 0; /* keep */
 }
 h1, h2 {
-    font-family: serif;
+    font-family: 'Roboto', 'Geneva', 'Trebuchet MS', sans-serif;
 }
 #tagline {
     font-style: italic;
+    font-size: 2em;
 }
 /* all images will stretch to fill their containing element */
 img {
@@ -37,11 +39,17 @@ img {
     max-width: 1280px; /* keep */
     margin: auto; /* keep */
     display: grid; /* keep */
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(2, auto);
+    grid-template-columns: repeat(5, auto);
+    grid-template-rows: repeat(5, auto);
     grid-template-areas:
-        "header arial georgia pairing bobwhite-quail"
-        "readability line-length helvetica typeface footer";
+        "header header header header header"
+        "pairing pairing pairing arial georgia"
+        "bobwhite-quail bobwhite-quail readability readability readability"
+        "bobwhite-quail bobwhite-quail line-length line-length line-length"
+        "typeface typeface typeface helvetica helvetica"
+        "typeface typeface typeface ... ..."
+        "footer footer footer footer footer"
+
 }
 
 /* all grid items -
@@ -53,43 +61,69 @@ img {
 header {
     grid-area: header; /* keep */
     background: #fff; /* keep */
+    text-align: center;
+    padding: 1em 0em 0em 0em;
 }
+
+header h1 {
+  font-size: 3em;
+}
+
 #arial {
     grid-area: arial; /* keep */
     background: #a8e8ff; /* keep */
+    padding: 3em 1em 3em 1em;
 }
 #georgia {
     grid-area: georgia; /* keep */
     background: #a8e8ff; /* keep */
+    padding: 3em 1em 3em 1em;
 }
+
 #pairing {
     grid-area: pairing; /* keep */
     background: #a8e8ff; /* keep */
+    margin: 0;
+    padding: 2em 3em 2em 3em;
+    font-size: 1.5em;
 }
+
 #bobwhite-quail {
     grid-area: bobwhite-quail; /* keep */
     background: #d2f4ff; /* keep */
+    padding: 3em 1em 3em 4em;
 }
 #readability {
     grid-area: readability; /* keep */
     background: #d2f4ff; /* keep */
+    padding: 1em 4em 1em 1em;
+    font-size: 1.1em;
 }
 #line-length {
     grid-area: line-length; /* keep */
     background: #d2f4ff; /* keep */
+    padding: 0em 4em 2em 1em;
+    font-size: 1.1em;
 }
 #helvetica {
     grid-area: helvetica; /* keep */
     background: #fff; /* keep */
+    padding: 2em;
+    margin: 3em;
 }
 #typeface {
     grid-area: typeface; /* keep */
     color: #d2f4ff; /* keep */
     background: #5598b2; /* keep */
+    margin: 0;
+    text-shadow: .01em 0.1em 0.1em black;
+    padding: 2em 0em 0em 2em;
 }
 footer {
     grid-area: footer; /* keep */
     background: #b2988a; /* keep */
+    text-align: center;
+    padding: 1em 0em 1em 0em;
 }
 
 /* end of all 10 grid items */
@@ -98,6 +132,7 @@ footer {
 /* pseudo classes */
 a {
     color: #7c6a60; /* keep */
+    text-shadow: none;
 }
 a:hover {
     color: #f4cdb7; /* keep */
@@ -105,3 +140,70 @@ a:hover {
 }
 
 /* media queries below - only 1 is needed */
+
+@media screen and (max-width: 760px) {
+
+
+  #container {
+      grid-template-columns: repeat(2, auto);
+      grid-template-rows: repeat(10, auto);
+      grid-template-areas:
+          "header header"
+          "arial georgia"
+          "pairing pairing"
+          "bobwhite-quail bobwhite-quail"
+          "bobwhite-quail bobwhite-quail"
+          "readability readability"
+          "line-length line-length"
+          "helvetica helvetica"
+          "typeface typeface"
+          "footer footer";
+    }
+
+    .header img {
+      display: none;
+    }
+
+    header {
+      padding: 1rem;
+    }
+
+    header img {
+      display: none;
+    }
+
+    #arial {
+      padding: 1rem;
+    }
+
+    #georgia {
+      padding: 1rem;
+    }
+
+    #pairing {
+      padding: 1rem;
+    }
+
+    #bobwhite-quail {
+        padding: 1rem;
+    }
+
+    #readability {
+        padding: 1rem;
+    }
+
+    #line-length {
+        padding: 1rem;
+    }
+
+    #helvetica {
+        padding: 1rem;
+        margin: 0rem;
+    }
+    #typeface {
+        padding: 1rem;
+    }
+    footer {
+      padding: 1rem;
+    }
+}
